--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
-    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
@@ -48,8 +47,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
+    "redux-mock-store": "^1.5.4",
     "tailwindcss": "^3.0.23"
   },
   "jest": {
